sample/error/e02411.asn
E02411 DEFINITIONS ::=
BEGIN
    val INTEGER ::= 1
    Seq ::= SEQUENCE {
        item    BOOLEAN DEFAULT val -- E02411
    }
END
